Fix "power off" getting squished

--- a/src/css/slider.scss
+++ b/src/css/slider.scss
@@ -144,6 +144,7 @@
 
         .title {
             font-size: 16px;
+            flex: 1;
         }
 
         .icon {
